# comrade

./: Cargo.toml  README.md  justfile
.cargo/: config.toml
crates/comrade-core/: Cargo.toml  README.md
crates/comrade-core/src/: context.rs  lib.rs
crates/comrade-core/src/storage/: mod.rs  pairs.rs  stack.rs  value.rs
crates/comrade-core/tests/: lock.rs  mod.rs
crates/fusion/: Cargo.toml  README.md
crates/fusion/src/: lib.rs
crates/hypervisor/: Cargo.toml
crates/hypervisor/src/: bindings.rs  lib.rs
crates/hypervisor/tests/: mod.rs
crates/hypervisor/wit/: world.wit
examples/lock/: Cargo.toml  README.md
examples/lock/src/: bindings.rs  lib.rs
examples/lock/wit/: world.wit
examples/unlock/: Cargo.toml
examples/unlock/src/: bindings.rs  lib.rs
examples/unlock/wit/: world.wit
tests/: Cargo.toml  README.md
tests/tests/: integration.rs
