[package]
name = "hypervisor"
version = "0.1.0"
edition = "2021"

[dependencies]
wit-bindgen-rt = { version = "0.29.0", features = ["bitflags"] }
multicid = { version = "1.0", git = "https://github.com/DougAnderson444/multicid.git", branch = "wasm32-compat" }
multihash = { version = "1.0", git = "https://github.com/cryptidtech/multihash.git" }
multikey = { version = "^1.0", git = "https://github.com/DougAnderson444/multikey.git", branch = "wasm32-pure-doug" }
multisig = { git = "https://github.com/DougAnderson444/multisig.git", branch = "wasm32" }
multitrait = { version = "1.0", git = "https://github.com/cryptidtech/multitrait.git" }
multiutil = { version = "1.0", git = "https://github.com/cryptidtech/multiutil.git" }

[dev-dependencies]
wasmtime = { version = "21", features = ['component-model'] }
wasmtime-wasi = "21"
fusion = { workspace = true }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "comrade:hypervisor"

[package.metadata.component.dependencies]
