[package]
name = "lock"
version = "0.1.0"
edition = "2021"

[dependencies]
wit-bindgen-rt = { version = "0.29.0", features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:lock"

[package.metadata.component.dependencies]

[package.metadata.component.target.dependencies]
"comrade:hypervisor" = { path = "wit/deps/hypervisor" }
